upgrading usage of deprecated method